# Panoramix

./: .gitignore  CMakeLists.txt  README.md
auxilary/ide/sublime-text/: AutoNamespace.sublime-snippet  HeaderGuard.sublime-snippet
cmake/: FindCereal.cmake  FindGLPK.cmake  FindMATLAB.cmake  FindMOSEK.cmake  PrecompiledHeader.cmake
executable/: CMakeLists.txt
executable/panorama/: CMakeLists.txt  main.cpp  main_label.cpp  main_run.cpp  panorama_reconstruction.cpp  panorama_reconstruction.hpp  pi_graph.cpp  pi_graph.hpp  pi_graph_annotation.cpp  pi_graph_annotation.hpp  pi_graph_annotation_widgets.cpp  pi_graph_annotation_widgets.hpp  pi_graph_cg.cpp  pi_graph_cg.hpp  pi_graph_control.cpp  pi_graph_control.hpp  pi_graph_occlusion.cpp  pi_graph_occlusion.hpp  pi_graph_postprocess.cpp  pi_graph_postprocess.hpp  pi_graph_solve.cpp  pi_graph_solve.hpp  pi_graph_vis.cpp  pi_graph_vis.hpp  setpath.bat.in
panoramix/: CMakeLists.txt  panoramix.unittest.cpp  panoramix.unittest.hpp  pch.hpp
panoramix/src/: algorithms.hpp  algorithms.test.cpp  any.hpp  any.test.cpp  basic_types.hpp  basic_types.test.cpp  bounding.hpp  cameras.cpp  cameras.hpp  cameras.test.cpp  canvas.hpp  clock.cpp  clock.hpp  color.cpp  color.hpp  containers.hpp  containers.test.cpp  decorate.hpp  discretization.cpp  discretization.hpp  eigen.hpp  factor_graph.cpp  factor_graph.hpp  factor_graph.test.cpp  failable.hpp  failable.test.cpp  feature.test.cpp  file.cpp  file.hpp  forest.hpp  geo_context.cpp  geo_context.hpp  geometry.hpp  gui.qrc  gui_util.cpp  gui_util.hpp  gui_win.css  handle.hpp  image.cpp  image.hpp  (+44 more)
